Update package for npm command in heroku

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Website for Invisible Cities from Georgia Tech Arts@Tech.",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
