--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "body-parser": "^1.18.3",
     "dotenv": "^4.0.0",
     "ejs": "^2.6.1",
+    "elasticsearch": "^15.2.0",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "firebase": "^5.5.7"
